# rs_foundation_models

./: .gitignore  CLAUDE.md  TRAINING_PLAN.md  bootstrap_env.sh  pyproject.toml
.cursor/plans/: 2026-04-25-reliable-lora-foundation-plan.md  2026-04-25-reliable-phases-3-7-master-plan.md  2026-04-25-reliable-training-regularizers-plan.md  cross-band-finetune-catalog.md  powerful_chivit_fine-tuning_07a25de9.plan.md  reliable-solutions-test-plan.md  reliable-solutions.md  stack-g-design.md
.cursor/rules/: project-knowledge.mdc
conda/: environment.yml
rs_finetune/: .gitignore  callbacks.py  classifier_utils.py  eval_bands_cd.py  eval_bands_cls.py  eval_bands_seg.py  eval_scale_cd.py  eval_scale_cls.py  requirements-dev.txt  requirements.txt  run_tests.sh  storage_paths.py  train_change.py  train_classifier.py  train_segmenter.py  utils.py
rs_finetune/change_detection_pytorch/base/: model.py
rs_finetune/change_detection_pytorch/datasets/: BEN.py  BUILD.py  HARVEY.py  Sen1Floods11.py  cashew.py  eurosat.py  mBEN.py  mBrickKiln.py  mEUROSAT.py  mSAcrop.py  so2sat.py
rs_finetune/change_detection_pytorch/encoders/: __init__.py  channel_vit.py  chi_vit.py  clay.py  croma.py  dinov2_sat.py  dinov3.py  dofa.py  dofa_pangea.py  prithvi.py  prithvi_pangea.py  swin_transformer.py  terrafm.py  timm_vit.py  utils_anysat.py  vision_transformer.py  vision_transformer_overlap.py
rs_finetune/change_detection_pytorch/unet/: model.py  segmentation_model.py
rs_finetune/change_detection_pytorch/upernet/: model.py  segmentation_model.py
rs_finetune/configs/: ben.json  cashew.json  cdd.json  cvit-pretrained.json  harvey.json  levir.json  m_ben.json  m_brick.json  m_eurosat.json  oscd.json  resisc.json  sa_crop.json  sen1floods11.json  so2sat.json  ucm.json
rs_finetune/reliable/: __init__.py  cdsd.py  ch_rs_ft.py  channel_mask.py  last_n_placement.py  lora_layer.py  lora_null_init.py  lsmm_aux_head.py  oplora.py
rs_finetune/scripts_cluster/x-SA-crop-type/: x-SA-crop-type_SatlasNet_rgb.sh  x-SA-crop-type_SatlasNet_rgb_head.sh  x-SA-crop-type_SatlasNet_s2.sh  x-SA-crop-type_SatlasNet_s2_head.sh  x-SA-crop-type_anysat_rgb.sh  x-SA-crop-type_anysat_rgb_head.sh  x-SA-crop-type_anysat_s2.sh  x-SA-crop-type_anysat_s2_head.sh  x-SA-crop-type_chivit_rgb.sh  x-SA-crop-type_chivit_rgb_head.sh  x-SA-crop-type_chivit_s2.sh  x-SA-crop-type_chivit_s2_head.sh  x-SA-crop-type_croma_rgb.sh  x-SA-crop-type_croma_rgb_head.sh  x-SA-crop-type_croma_s2.sh  x-SA-crop-type_croma_s2_head.sh  x-SA-crop-type_dinov2_rgb.sh  x-SA-crop-type_dinov2_rgb_head.sh  (+30 more)
rs_finetune/tests/: conftest.py  test_crossband_finetune.py
rs_pretrain/: chivit_pretrain.py  main_ibot_it.py
rs_pretrain/scripts/: run_it_full.sh
tests/: conftest.py  test_crossband_finetune.py
(+447 files in other folders)
