[project]
name = "rs-foundation-models"
version = "0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["rs_finetune", "rs_pretrain"]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
jobs = 0
py-version = "3.11"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0801",
    "R0902",
    "R0903",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0917",
    "W0511",
    "W0613",
    "W1203",
]
