[project]
name = "rs-foundation-models"
version = "0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aim",
    "albumentations>=1.0.0,<=1.0.3",
    "efficientnet-pytorch==0.6.3",
    "einops>=0.7.0",
    "geobench>=1.0.0",
    "h5py",
    "huggingface_hub>=1.8.0",
    "mmengine>=0.10.0",
    "numpy",
    "opencv-python-headless",
    "opencv-torchvision-transforms-yuzhiyang",
    "pillow",
    "pretrainedmodels==0.7.4",
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "python-box>=7.0.0",
    "pytorch-lightning>=2.0.0",
    "rasterio",
    "ruff>=0.8.0",
    "scipy",
    "timm==0.4.12",
    "torch>=2.1",
    "torchmetrics",
    "torchvision",
    "transformers>=5.4.0",
    "vit-pytorch>=1.0.0",
]

[tool.uv]
package = false
override-dependencies = [
    "huggingface-hub>=1.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["rs_finetune", "rs_pretrain"]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
jobs = 0
py-version = "3.11"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0801",
    "R0902",
    "R0903",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0917",
    "W0511",
    "W0613",
    "W1203",
]
